// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`body component should render with custom primary color 1`] = `
.c0 {
  color: #7350FF;
  font-family: Avenir Regular,'Avenir Next','Segoe UI', sans-serif;
  font-size: 13px;
  font-weight: 400;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  line-height: 18px;
}

<p
  className="c0"
  color="primary"
>
  Lorem ipsum
</p>
`;

exports[`body component should render with default css properties 1`] = `
.c0 {
  color: #1A1A38;
  font-family: Avenir Regular,'Avenir Next','Segoe UI', sans-serif;
  font-size: 13px;
  font-weight: 400;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  line-height: 18px;
}

<p
  className="c0"
>
  Lorem ipsum
</p>
`;
